# FlightGear

./: .gitignore  CMakeLists.txt  Data.cpp  Data.h  README.md  VarInfo.cpp  VarInfo.h  details.txt  generic_small.xml  main.cpp
Commands/: AssignCommand.cpp  AssignCommand.h  Command.cpp  Command.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  FuncCommand.cpp  FuncCommand.h  IfCommand.cpp  IfCommand.h  LoopCommand.cpp  LoopCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  PrintCommand.cpp  PrintCommand.h  SleepCommand.cpp  SleepCommand.h
Expressions/: Calculator.cpp  Calculator.h
